Include hint about adding single color shades (#482)

--- a/src/pages/docs/customizing-colors.mdx
+++ b/src/pages/docs/customizing-colors.mdx
@@ -139,9 +139,9 @@ module.exports = {
 }
 ```
 
-### Overriding a single shade
+### Overriding or adding a single shade
 
-Since values in the `theme.extend` section of your config file are only merged shallowly, overriding a single shade is slightly more complicated.
+Since values in the `theme.extend` section of your config file are only merged shallowly, overriding or adding a single shade is slightly more complicated.
 
 The easiest option is to import the default theme and [spread](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Spread_syntax) in the color you want to customize along with the new shade value:
 
