Update installation.mdx (#517)

--- a/src/pages/docs/installation.mdx
+++ b/src/pages/docs/installation.mdx
@@ -56,7 +56,10 @@ This will create a minimal `tailwind.config.js` file at the root of your project
 ```js
 // tailwind.config.js
 module.exports = {
-  theme: {},
+  purge: [],
+  theme: {
+    extend: {},
+  },
   variants: {},
   plugins: [],
 }
