--- a/src/pages/docs/release-notes.mdx
+++ b/src/pages/docs/release-notes.mdx
@@ -5,6 +5,33 @@ description: What's new in the latest version of Tailwind CSS.
 
 import { ColorPalette } from '@/components/ColorPalette'
 
+## Tailwind CSS v1.8
+
+<div className="-mt-4 text-gray-600">Sep 4, 2020</div>
+
+Tailwind CSS v1.8 is now available with a handful of new utilities, a couple new features, and an exciting new experiment!
+
+### New features
+
+- New `font-variant-numeric` utilities ([#2305](https://github.com/tailwindlabs/tailwindcss/pull/2305))
+- New `place-items`, `place-content`, `place-self`, `justify-items`, and `justify-self` utilities ([#2306](https://github.com/tailwindlabs/tailwindcss/pull/2306))
+- New `preserveHtmlElements` option for `purge` ([#2283](https://github.com/tailwindlabs/tailwindcss/pull/2283))
+- New `layers` mode for `purge` ([#2288](https://github.com/tailwindlabs/tailwindcss/pull/2288))
+- Support configuring variants as functions ([#2309](https://github.com/tailwindlabs/tailwindcss/pull/2309))
+- Dark mode variant (experimental) ([#2279](https://github.com/tailwindlabs/tailwindcss/pull/2279))
+
+### Changes
+
+- CSS within `@layer` at-rules are now grouped with the corresponding `@tailwind` at-rule ([#2312](https://github.com/tailwindlabs/tailwindcss/pull/2312))
+
+### Deprecations
+
+- The `conservative` purge mode has been deprecated in favor of the new `layers` mode ([#2288](https://github.com/tailwindlabs/tailwindcss/pull/2288))
+
+Check out the [full release notes on GitHub](https://github.com/tailwindlabs/tailwindcss/releases/tag/v1.8.0) for more details.
+
+---
+
 ## Tailwind CSS v1.7
 
 <div className="-mt-4 text-gray-600">Aug 18, 2020</div>
