--- a/src/pages/docs/justify-self.mdx
+++ b/src/pages/docs/justify-self.mdx
@@ -22,10 +22,13 @@ Use `.justify-self-auto` to align an item based on the value of the grid's `just
 
 ```html
 <template preview>
-  <div class="grid grid-cols-3 justify-items-stretch bg-gray-200 h-24">
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">1</div>
-    <div class="justify-self-auto text-gray-800 text-center bg-gray-500 px-4 py-2 m-2">2</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">3</div>
+  <div class="grid grid-cols-3 gap-4 justify-items-stretch h-48">
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">1</div>
+    <div class="justify-self-auto text-gray-800 bg-gray-500 flex justify-center items-center px-4 py-2">2</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">3</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">4</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">5</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">6</div>
   </div>
 </template>
 ```
@@ -36,10 +39,13 @@ Use `.justify-self-start` to align a grid item to the start of the grid area on 
 
 ```html
 <template preview>
-  <div class="grid grid-cols-3 justify-items-stretch bg-gray-200 h-24">
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">1</div>
-    <div class="justify-self-start text-gray-800 text-center bg-gray-500 px-4 py-2 m-2">2</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">3</div>
+  <div class="grid grid-cols-3 gap-4 justify-items-stretch h-48">
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">1</div>
+    <div class="justify-self-start text-gray-800 bg-gray-500 flex justify-center items-center px-4 py-2">2</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">3</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">4</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">5</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">6</div>
   </div>
 </template>
 ```
@@ -50,10 +56,13 @@ Use `.justify-self-center` to align a grid item along the center of the grid are
 
 ```html
 <template preview>
-  <div class="grid grid-cols-3 justify-items-stretch bg-gray-200 h-24">
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">1</div>
-    <div class="justify-self-center text-gray-800 text-center bg-gray-500 px-4 py-2 m-2">2</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">3</div>
+  <div class="grid grid-cols-3 gap-4 justify-items-stretch h-48">
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">1</div>
+    <div class="justify-self-center text-gray-800 bg-gray-500 flex justify-center items-center px-4 py-2">2</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">3</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">4</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">5</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">6</div>
   </div>
 </template>
 ```
@@ -64,10 +73,13 @@ Use `.justify-self-end` to align a grid item to the end of the grid area on the 
 
 ```html
 <template preview>
-  <div class="grid grid-cols-3 justify-items-stretch bg-gray-200 h-24">
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">1</div>
-    <div class="justify-self-end text-gray-800 text-center bg-gray-500 px-4 py-2 m-2">2</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">3</div>
+  <div class="grid grid-cols-3 gap-4 justify-items-stretch h-48">
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">1</div>
+    <div class="justify-self-end text-gray-800 bg-gray-500 flex justify-center items-center px-4 py-2">2</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">3</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">4</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">5</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">6</div>
   </div>
 </template>
 ```
@@ -78,10 +90,13 @@ Use `.justify-self-stretch` to stretch a grid item to fill the grid area on its 
 
 ```html
 <template preview>
-  <div class="grid grid-cols-3 justify-items-stretch bg-gray-200 h-24">
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">1</div>
-    <div class="justify-self-stretch text-gray-800 text-center bg-gray-500 px-4 py-2 m-2">2</div>
-    <div class="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">3</div>
+  <div class="grid grid-cols-3 gap-4 justify-items-stretch h-48">
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">1</div>
+    <div class="justify-self-stretch text-gray-800 bg-gray-500 flex justify-center items-center px-4 py-2">2</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">3</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">4</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">5</div>
+    <div class="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">6</div>
   </div>
 </template>
 ```
@@ -102,10 +117,13 @@ For more information about Tailwind's responsive design features, check out the 
     </div>
   `}
   preview={(className) => (
-    <div className="grid grid-cols-3 justify-items-stretch bg-gray-200 h-24">
-      <div className="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">1</div>
-      <div className={`text-gray-800 text-center bg-gray-500 px-4 py-2 m-2 ${className}`}>2</div>
-      <div className="text-gray-700 text-center bg-gray-400 px-4 py-2 m-2">3</div>
+    <div className="grid grid-cols-3 gap-4 h-48">
+      <div className="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">1</div>
+      <div className={`text-gray-800 bg-gray-500 flex justify-center items-center px-4 py-2 ${className}`}>2</div>
+      <div className="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">3</div>
+      <div className="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">4</div>
+      <div className="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">5</div>
+      <div className="text-gray-700 bg-gray-400 flex justify-center items-center px-4 py-2">6</div>
     </div>
   )}
 />
